--- a/app/src/main/res/layout/activity_magnetometer.xml
+++ b/app/src/main/res/layout/activity_magnetometer.xml
@@ -15,7 +15,7 @@
     android:layout_weight="8"
     android:orientation="vertical"
     >
-    <com.teamDroiders.ladybuddy.SpeedometerView
+    <com.grp9.securelady.SpeedometerView
         android:id="@+id/speedometer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
