--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -212,12 +212,11 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/send_Location"
+                android:id="@+id/nearbyPolice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
                 android:layout_margin="12dp"
+                android:layout_gravity="center_horizontal"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -227,37 +226,36 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:gravity="center"
+                    android:padding="3dp">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_app_overview"
-                        app:srcCompat="@drawable/ic_app_overview" />
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/ic_baseline_local_police_24"
+                        app:srcCompat="@drawable/date" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="App\nTour"
+                        android:layout_marginBottom="15dp"
                         android:gravity="center"
+                        android:text="Find nearby police"
                         android:textColor="@color/common_google_signin_btn_text_light_pressed"
                         android:textSize="16sp" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/about_us"
+                android:id="@+id/ShareBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
                 android:layout_margin="12dp"
+                android:layout_gravity="center_horizontal"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -267,42 +265,42 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:gravity="center"
+                    android:padding="3dp">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_about_us"
-                        android:layout_gravity="center"
-                        app:srcCompat="@drawable/ic_about_us" />
+                        android:src="@drawable/ic_share"
+                        app:srcCompat="@drawable/ic_share" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="About\nUs"
+                        android:layout_marginBottom="15dp"
                         android:gravity="center"
+                        android:text="Share and Save Lives"
                         android:textColor="@color/common_google_signin_btn_text_light_pressed"
                         android:textSize="16sp" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
+
         </GridLayout>
 
-
         <androidx.cardview.widget.CardView
-            android:id="@+id/ShareBtn"
-            android:layout_width="match_parent"
+            android:id="@+id/about_us"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="12dp"
             android:layout_gravity="center_horizontal"
             android:clickable="true"
             android:focusable="true"
-            android:layout_marginBottom="6dp"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="12dp"
             app:cardElevation="6dp">
@@ -310,22 +308,23 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center"
-                android:padding="3dp">
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_share"
-                    app:srcCompat="@drawable/ic_share" />
+                    android:src="@drawable/ic_about_us"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/ic_about_us" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="12dp"
+                    android:text="About\nUs"
                     android:gravity="center"
-                    android:text="Share and Save Lives"
                     android:textColor="@color/common_google_signin_btn_text_light_pressed"
                     android:textSize="16sp" />
 
